Fixes position issues on mobile where babylonjs wouldnt fill screen

--- a/styles/particle_box.module.css
+++ b/styles/particle_box.module.css
@@ -16,20 +16,6 @@
   cursor: default;
 }
 
-.wasd {
-  opacity: 0;
-  position: fixed;
-  z-index: 8;
-  bottom: 30px;
-  right: 30px;
-  animation: fade_in, fade_out;
-  animation-duration: 1s, 1s;
-  animation-delay: 5s, 10s;
-  animation-timing-function: ease-in-out;
-  animation-fill-mode: forwards, forwards;
-  margin-right: 0;
-}
-
 .babylon {
   position: fixed;
   top: 0;
@@ -38,21 +24,17 @@
 @keyframes fade_in {
   0% {
     opacity: 0;
-    margin-right: 0;
   }
   100% {
-    opacity: 0.7;
-    margin-right: 30px;
+    opacity: 1;
   }
 }
 
 @keyframes fade_out {
   0% {
-    opacity: 0.7;
-    margin-right: 30px;
+    opacity: 1;
   }
   100% {
     opacity: 0;
-    margin-right: 0;
   }
 }
